fix: Fix visible focus for some attribute types (#12974)
Visual focus is lost, namely the blue frame around active element is not displayed.

Closes #12971

--- a/feature-libs/product-configurator/rulebased/styles/_configurator-attribute-radio-button.scss
+++ b/feature-libs/product-configurator/rulebased/styles/_configurator-attribute-radio-button.scss
@@ -7,6 +7,8 @@
     }
   }
 
+  @include cx-configurator-attribute-visible-focus();
+
   .cx-quantity {
     padding-block-end: 1rem;
   }
